Generate output in `esm` format as well.

--- a/package.json
+++ b/package.json
@@ -85,5 +85,6 @@
     }
   ],
   "browser": "dist/es6/dc.js",
-  "main": "dist/es6/dc.js"
+  "main": "dist/es6/dc.js",
+  "module": "dist/es6/dc.esm.js"
 }
