--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "grunt-contrib-connect": "~2.0",
     "grunt-contrib-copy": "~1.0",
     "grunt-contrib-cssmin": "3.x",
-    "grunt-contrib-jasmine": "2.x",
+    "grunt-contrib-jasmine": "^2.1.0",
     "grunt-contrib-uglify": "^4.0.1",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-docco2": "^0.2.1",
