--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "grunt-contrib-copy": "~1.0",
     "grunt-contrib-cssmin": "3.x",
     "grunt-contrib-jasmine": "~2.1",
-    "grunt-contrib-uglify-es": "^3.3.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-docco2": "^0.2.1",
     "grunt-eslint": "^21.1.0",
@@ -65,6 +64,7 @@
     "node-sass": "^4.12.0",
     "promise-polyfill": "^8.1.3",
     "reductio": "0.6.x",
+    "rollup-plugin-terser": "^5.1.2",
     "time-grunt": "~1.4",
     "uglify-js": "^3.6.0",
     "whatwg-fetch": "^3.0.0"
