--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "grunt-fileindex": "~0.1",
     "grunt-gh-pages": "^3.1.0",
     "grunt-jsdoc": "^2.4.0",
-    "grunt-jsdoc-to-markdown": "github:dc-js/grunt-jsdoc-to-markdown",
+    "grunt-jsdoc-to-markdown": "^5.0.0",
     "grunt-karma": "^3.0.2",
     "grunt-rollup": "^10.0.0",
     "grunt-sass": "^3.1.0",
