--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "node-sass": "^4.12.0",
     "promise-polyfill": "^8.1.3",
     "reductio": "0.6.x",
+    "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-terser": "^5.1.2",
     "time-grunt": "~1.4",
     "uglify-js": "^3.6.0",
