--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "grunt-fileindex": "~0.1",
     "grunt-gh-pages": "^3.1.0",
     "grunt-jsdoc": "^2.4.0",
-    "grunt-jsdoc-to-markdown": "github:dc-js/grunt-jsdoc-to-markdown",
+    "grunt-jsdoc-to-markdown": "^5.0.0",
     "grunt-karma": "^3.0.2",
     "grunt-rollup": "^10.0.0",
     "grunt-sass": "^3.1.0",
@@ -64,6 +64,7 @@
     "node-sass": "^4.12.0",
     "promise-polyfill": "^8.1.3",
     "reductio": "0.6.x",
+    "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-terser": "^5.1.2",
     "time-grunt": "~1.4",
     "uglify-js": "^3.6.0",
