--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "grunt-jsdoc": "^2.4.0",
     "grunt-jsdoc-to-markdown": "^5.0.0",
     "grunt-karma": "^3.0.2",
-    "grunt-rollup": "^10.0.0",
     "grunt-sass": "^3.1.0",
     "grunt-shell": "~2.1",
     "ink-docstrap": "^1.3.2",
@@ -64,6 +63,7 @@
     "node-sass": "^4.12.0",
     "promise-polyfill": "^8.1.3",
     "reductio": "0.6.x",
+    "rollup": "^1.25.2",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-terser": "^5.1.2",
     "time-grunt": "~1.4",
