--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dc",
-  "version": "3.1.7",
+  "version": "3.1.8",
   "license": "Apache-2.0",
   "copyright": "2019",
   "description": "A multi-dimensional charting library built to work natively with crossfilter and rendered using d3.js ",
@@ -25,11 +25,12 @@
     "url": "https://github.com/dc-js/dc.js.git"
   },
   "dependencies": {
-    "d3": "^5.12.0"
+    "d3": "^5.12.0",
+    "url-search-params-polyfill": "^7.0.0"
   },
   "devDependencies": {
     "compare-versions": "^3.5.1",
-    "crossfilter2": "^1.4.7",
+    "crossfilter2": "^1.4.8",
     "file-saver": "^1.3.8",
     "grunt": "^1.0.4",
     "grunt-browserify": "^5.2.0",
