--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "compare-versions": "^3.5.1",
     "crossfilter2": "^1.4.7",
     "file-saver": "^1.3.8",
+    "glob": "^7.1.5",
     "grunt": "^1.0.4",
     "grunt-browserify": "^5.2.0",
     "grunt-cli": "^1.3.2",
