`esm` is now the default for `module` in package.json.

--- a/package.json
+++ b/package.json
@@ -87,5 +87,5 @@
   ],
   "browser": "dist/es6/dc.js",
   "main": "dist/es6/dc.js",
-  "module": "dist/es6/dc.esm.js"
+  "module": "dist/esm/index.js"
 }
