--- a/.npmignore
+++ b/.npmignore
@@ -8,5 +8,11 @@
 !LICENSE
 !dist/**/*
 
+# ES6 modules
+!src/**/*
+
+# Exclude index-with-version from ES6 modules
+src/index-with-version.js
+
 # ignore the source map files, these have no use without source files
 dist/**/*.map
