--- a/package.json
+++ b/package.json
@@ -30,6 +30,24 @@
   "devDependencies": {
     "compare-versions": "^3.5.1",
     "crossfilter2": "^1.4.7",
+    "d3-array": "^2.4.0",
+    "d3-axis": "^1.0.12",
+    "d3-brush": "^1.1.4",
+    "d3-collection": "^1.0.7",
+    "d3-dispatch": "^1.0.6",
+    "d3-ease": "^1.0.6",
+    "d3-format": "^1.4.2",
+    "d3-geo": "^1.11.9",
+    "d3-hierarchy": "^1.1.9",
+    "d3-interpolate": "^1.3.3",
+    "d3-scale": "^3.2.0",
+    "d3-scale-chromatic": "^1.5.0",
+    "d3-selection": "^1.4.1",
+    "d3-shape": "^1.3.7",
+    "d3-time": "^1.1.0",
+    "d3-time-format": "^2.2.2",
+    "d3-timer": "^1.0.10",
+    "d3-zoom": "^1.8.3",
     "file-saver": "^1.3.8",
     "grunt": "^1.0.4",
     "grunt-browserify": "^5.2.0",
