eslint `no-var`, `prefer-const`, and `no-shadow`

--- a/.eslintrc
+++ b/.eslintrc
@@ -87,6 +87,8 @@
     "no-debugger": 0,
     "no-eq-null": 0,
     "no-eval": 0,
+    "no-var": "error",
+    "prefer-const": "error",
     "no-extra-semi": "error",
     "no-unused-expressions": 0,
     "block-scoped-var": 0,
@@ -96,7 +98,7 @@
     "valid-typeof": 0,
     "no-proto": 0,
     "no-script-url": 0,
-    "no-shadow": 0,
+    "no-shadow": "error",
     "no-new-func": 0,
     "no-new-wrappers": 0,
     "dot-notation": 0,
