--- a/package.json
+++ b/package.json
@@ -48,6 +48,10 @@
     "d3-time-format": "^2.2.2",
     "d3-timer": "^1.0.10",
     "d3-zoom": "^1.8.3",
+    "eslint": "^6.6.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.2.1",
     "file-saver": "^1.3.8",
     "grunt": "^1.0.4",
     "grunt-browserify": "^5.2.0",
