--- a/.eslintrc
+++ b/.eslintrc
@@ -29,18 +29,12 @@
   "rules": {
     "no-useless-escape": "off",
     "no-console": "off",
-    "camelcase": 2,
-    "curly": 2,
-    "eqeqeq": 2,
-    "no-extend-native": 2,
-    "wrap-iife": [
-      2,
-      "any"
-    ],
-    "indent": [
-      2,
-      4,
-      {
+    "camelcase": "error",
+    "curly": "error",
+    "eqeqeq": "error",
+    "no-extend-native": "error",
+    "wrap-iife": ["error", "any"],
+    "indent": ["error", 4, {
         "SwitchCase": 1,
         "MemberExpression": "off",
         "CallExpression": {"arguments": "first"},
@@ -48,34 +42,14 @@
         "flatTernaryExpressions": true
       }
     ],
-    "no-caller": 2,
-    "no-new": 2,
-    "no-unused-vars": [
-      "error",
-      {
-        "args": "none"
-      }
-    ],
-    "max-params": [
-      2,
-      5
-    ],
-    "max-depth": [
-      2,
-      4
-    ],
-    "complexity": [
-      2,
-      10
-    ],
-    "max-len": [
-      2,
-      140
-    ],
-    "quotes": [
-      2,
-      "single"
-    ],
+    "no-caller": "error",
+    "no-new": "error",
+    "no-unused-vars": ["error", {"args": "none"}],
+    "max-params": ["error", 5],
+    "max-depth": ["error", 4],
+    "complexity": ["error", 10],
+    "max-len": ["error", 140],
+    "quotes": ["error", "single"],
     "no-var": "error",
     "prefer-const": "error",
     "no-shadow": "error",
@@ -83,16 +57,7 @@
     "arrow-body-style": "error",
     "implicit-arrow-linebreak": "error",
     "arrow-parens": ["error", "as-needed"],
-    "space-before-function-paren": [
-      2,
-      "always"
-    ],
-    "valid-jsdoc": [
-      "error",
-      {
-        "requireParamDescription": false,
-        "requireReturnDescription": false
-      }
-    ]
+    "space-before-function-paren": ["error", "always"],
+    "valid-jsdoc": ["error", {"requireParamDescription": false, "requireReturnDescription": false}]
   }
 }
