--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
     "eslint-plugin-promise": "^4.2.1",
     "file-saver": "^1.3.8",
     "grunt": "^1.0.4",
-    "grunt-browserify": "^5.2.0",
     "grunt-cli": "^1.3.2",
     "grunt-contrib-connect": "~2.0",
     "grunt-contrib-copy": "~1.0",
@@ -62,7 +61,6 @@
     "grunt-contrib-jasmine": "~2.1",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-docco2": "^0.2.1",
-    "grunt-eslint": "^21.1.0",
     "grunt-fileindex": "~0.1",
     "grunt-gh-pages": "^3.1.0",
     "grunt-jsdoc": "^2.4.0",
@@ -72,7 +70,6 @@
     "grunt-shell": "~2.1",
     "ink-docstrap": "^1.3.2",
     "jasmine-core": "^2.99.1",
-    "jsdifflib": "~1.1",
     "karma": "^4.4.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.2",
@@ -82,14 +79,12 @@
     "karma-summary-reporter": "^1.7.1",
     "load-grunt-tasks": "~4",
     "node-sass": "^4.13.0",
-    "promise-polyfill": "^8.1.3",
     "reductio": "0.6.x",
     "rollup": "^1.26.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-license": "^0.12.1",
     "rollup-plugin-terser": "^5.1.2",
-    "time-grunt": "~1.4",
-    "whatwg-fetch": "^3.0.0"
+    "time-grunt": "~1.4"
   },
   "scripts": {
     "test": "grunt test"
