--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dc",
-  "version": "4.0.0-beta.2",
+  "version": "4.0.0-beta.3",
   "license": "Apache-2.0",
   "copyright": "2019",
   "description": "A multi-dimensional charting library built to work natively with crossfilter and rendered using d3.js ",
@@ -94,8 +94,8 @@
     {
       "basePath": "/",
       "files": [
-        "dist/style/dc.css",
-        "dist/style/dc.min.css",
+        "dist/dc.css",
+        "dist/dc.min.css",
         "dist/dc.min.js",
         "dist/dc.js"
       ]
