do not allow d3, dc globals in sources
use eslint overrides
https://eslint.org/docs/user-guide/configuring#configuration-based-on-glob-patterns
to allow those in web-src, spec, and jasmine symbols in spec

--- a/.eslintrc
+++ b/.eslintrc
@@ -11,18 +11,9 @@
   "globals": {
     "console": false,
     "crossfilter": false,
-    "d3": false,
-    "dc": false,
     "global": false,
     "module": false,
-    "process": false,
-    "jasmine": false,
-    "expect": false,
-    "describe": false,
-    "it": false,
-    "beforeEach": false,
-    "afterEach": false,
-    "spyOn": false
+    "process": false
   },
   "extends": "eslint:recommended",
   "rules": {
@@ -61,5 +52,26 @@
     "prefer-template": "error",
     "template-curly-spacing": "error",
     "valid-jsdoc": ["error", {"requireParamDescription": false, "requireReturnDescription": false}]
-  }
+  },
+  "overrides": [
+    {
+      "files": ["spec/**/*.js", "web-src/**/*.js"],
+      "globals": {
+        "d3": false,
+        "dc": false
+      }
+    },
+    {
+      "files": ["spec/**/*.js"],
+      "globals": {
+        "jasmine": false,
+        "expect": false,
+        "describe": false,
+        "it": false,
+        "beforeEach": false,
+        "afterEach": false,
+        "spyOn": false
+      }
+    }
+  ]
 }
