Integrate with rollup and grunt

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "d3": "^5.15.1",
+    "rollup-plugin-typescript2": "^0.27.1",
     "typescript": "^3.9.5"
   },
   "devDependencies": {
