Avoid tslint and prettier conflicts

--- a/package.json
+++ b/package.json
@@ -90,7 +90,8 @@
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-license": "^2.0.0",
     "rollup-plugin-terser": "^5.3.0",
-    "time-grunt": "~1.4"
+    "time-grunt": "~1.4",
+    "tslint-config-prettier": "^1.18.0"
   },
   "scripts": {
     "test": "grunt test"
