Windows - attempt to test on Edge

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "d3": "^5.15.1"
   },
   "devDependencies": {
+    "@chiragrupani/karma-chromium-edge-launcher": "^2.0.0",
     "compare-versions": "^3.6.0",
     "crossfilter2": "^1.5.2",
     "d3-array": "^2.4.0",
