--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "karma-coverage": "^2.0.3",
     "karma-firefox-launcher": "^1.3.0",
     "karma-jasmine": "^1.1.2",
+    "karma-safari-launcher": "^1.0.0",
     "karma-sauce-launcher": "^2.0.2",
     "karma-summary-reporter": "^1.7.2",
     "load-grunt-tasks": "~4",
