--- a/package.json
+++ b/package.json
@@ -25,19 +25,20 @@
     "url": "https://github.com/dc-js/dc.js.git"
   },
   "dependencies": {
-    "d3": "^6.0.0"
+    "d3": "^6.1.0"
   },
   "devDependencies": {
     "@chiragrupani/karma-chromium-edge-launcher": "^2.0.0",
+    "@rollup/plugin-json": "^4.1.0",
     "compare-versions": "^3.6.0",
-    "crossfilter2": "^1.5.2",
+    "crossfilter2": "^1.5.3",
     "d3-collection": "^1.0.7",
     "eslint": "^6.8.0",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "file-saver": "^1.3.8",
-    "grunt": "^1.1.0",
+    "grunt": "^1.3.0",
     "grunt-cli": "^1.3.2",
     "grunt-contrib-connect": "~2.0",
     "grunt-contrib-copy": "~1.0",
@@ -46,7 +47,7 @@
     "grunt-contrib-watch": "^1.1.0",
     "grunt-docco2": "^0.2.1",
     "grunt-fileindex": "~0.1",
-    "grunt-gh-pages": "^3.1.0",
+    "grunt-gh-pages": "^4.0.0",
     "grunt-jsdoc": "^2.4.1",
     "grunt-jsdoc-to-markdown": "^5.0.0",
     "grunt-karma": "^3.0.2",
@@ -54,22 +55,21 @@
     "grunt-shell": "~2.1",
     "ink-docstrap": "^1.3.2",
     "jasmine-core": "^2.99.1",
-    "karma": "^5.0.1",
+    "karma": "^5.1.1",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "^2.0.2",
+    "karma-coverage": "^2.0.3",
     "karma-firefox-launcher": "^1.3.0",
     "karma-jasmine": "^1.1.2",
     "karma-safari-launcher": "git://github.com/RLovelett/karma-safari-launcher.git#safari-webdriver",
     "karma-sauce-launcher": "^2.0.2",
-    "karma-summary-reporter": "^1.7.2",
+    "karma-summary-reporter": "^1.8.0",
     "load-grunt-tasks": "~4",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "reductio": "0.6.x",
     "regression": "^2.0.1",
     "rollup": "^1.32.1",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-license": "^2.0.0",
-    "rollup-plugin-terser": "^5.3.0",
+    "rollup-plugin-license": "^2.2.0",
+    "rollup-plugin-terser": "^7.0.1",
     "time-grunt": "~1.4"
   },
   "scripts": {
