--- a/package.json
+++ b/package.json
@@ -25,14 +25,11 @@
     "url": "https://github.com/dc-js/dc.js.git"
   },
   "dependencies": {
-    "@types/d3": "^5.7.2",
-    "d3": "^5.15.1",
-    "rollup-plugin-typescript2": "^0.27.1",
-    "tslint": "^6.1.2",
-    "typescript": "^3.9.5"
+    "d3": "^5.15.1"
   },
   "devDependencies": {
     "@chiragrupani/karma-chromium-edge-launcher": "^2.0.0",
+    "@types/d3": "^5.7.2",
     "compare-versions": "^3.6.0",
     "crossfilter2": "^1.5.2",
     "d3-array": "^2.4.0",
@@ -91,8 +88,11 @@
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-license": "^2.0.0",
     "rollup-plugin-terser": "^5.3.0",
+    "rollup-plugin-typescript2": "^0.27.1",
     "time-grunt": "~1.4",
-    "tslint-config-prettier": "^1.18.0"
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.9.5"
   },
   "scripts": {
     "test": "grunt test"
