--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
   },
   "devDependencies": {
     "@chiragrupani/karma-chromium-edge-launcher": "^2.0.0",
-    "@types/d3": "^5.7.2",
     "@rollup/plugin-json": "^4.1.0",
+    "@types/d3": "^5.7.2",
     "compare-versions": "^3.6.0",
     "crossfilter2": "^1.5.2",
     "d3-collection": "^1.0.7",
@@ -75,6 +75,7 @@
     "time-grunt": "~1.4",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
+    "typedoc": "^0.17.0-3",
     "typescript": "^3.9.5"
   },
   "scripts": {
