--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "crossfilter2": "^1.5.2",
     "d3-collection": "^1.0.7",
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
