--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,13 @@
 {
   "arrowParens": "avoid",
-  "printWidth": 100,
   "singleQuote": true,
-  "tabWidth": 4
+  "overrides": [
+    {
+      "files": ["*.ts", "*.js"],
+      "options": {
+        "tabWidth": 4,
+        "printWidth": 100
+      }
+    }
+  ]
 }
