--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "time-grunt": "~1.4",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "typedoc": "^0.17.0-3",
+    "typedoc": "^0.20.12",
     "typescript": "^3.9.5"
   },
   "scripts": {
