--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typedoc": "^0.20.26",
+    "typedoc-plugin-pages-fork": "0.0.1",
     "typescript": "^3.9.5"
   },
   "scripts": {
