--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "karma-coverage": "^2.0.3",
     "karma-firefox-launcher": "^1.3.0",
     "karma-jasmine": "^1.1.2",
-    "karma-safari-launcher": "git://github.com/RLovelett/karma-safari-launcher.git#safari-webdriver",
+    "karma-safari-launcher": "git+https://github.com/RLovelett/karma-safari-launcher.git#safari-webdriver",
     "karma-summary-reporter": "^1.8.0",
     "load-grunt-tasks": "~4",
     "node-sass": "^4.14.1",
