--- a/package.json
+++ b/package.json
@@ -28,55 +28,54 @@
     "d3": "^7.1.1"
   },
   "devDependencies": {
-    "@chiragrupani/karma-chromium-edge-launcher": "^2.0.0",
+    "@chiragrupani/karma-chromium-edge-launcher": "^2.2.2",
     "@rollup/plugin-json": "^4.1.0",
     "@types/d3": "^7.1.0",
     "compare-versions": "^3.6.0",
     "crossfilter2": "^1.5.2",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-html": "^6.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-node": "^10.0.0",
-    "eslint-plugin-promise": "^4.2.1",
+    "docco": "^0.9.1",
+    "eslint": "^8.23.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-html": "^7.1.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.0.1",
     "file-saver": "^1.3.8",
-    "grunt": "^1.3.0",
-    "grunt-cli": "^1.3.2",
-    "grunt-contrib-connect": "~2.0",
-    "grunt-contrib-copy": "~1.0",
-    "grunt-contrib-cssmin": "3.x",
-    "grunt-contrib-jasmine": "~2.1",
+    "grunt": "^1.5.3",
+    "grunt-cli": "^1.4.3",
+    "grunt-contrib-connect": "^3.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^4.0.0",
+    "grunt-contrib-jasmine": "^3.0.0",
     "grunt-contrib-watch": "^1.1.0",
-    "grunt-docco2": "^0.2.1",
-    "grunt-fileindex": "~0.1",
+    "grunt-fileindex": "kum-deepak/grunt-fileindex",
     "grunt-gh-pages": "^4.0.0",
-    "grunt-karma": "^3.0.2",
+    "grunt-karma": "^4.0.2",
     "grunt-sass": "^3.1.0",
-    "grunt-shell": "~2.1",
-    "ink-docstrap": "^1.3.2",
-    "jasmine-core": "^2.99.1",
-    "karma": "^5.1.1",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "^2.0.3",
-    "karma-firefox-launcher": "^1.3.0",
-    "karma-jasmine": "^1.1.2",
-    "karma-safari-launcher": "git+https://github.com/RLovelett/karma-safari-launcher.git#safari-webdriver",
-    "karma-summary-reporter": "^1.8.0",
-    "load-grunt-tasks": "~4",
-    "sass": "^1.54.5",
-    "prettier": "2.0.5",
-    "reductio": "0.6.x",
+    "grunt-shell": "^4.0.0",
+    "jasmine-core": "^4.3.0",
+    "karma": "^6.4.0",
+    "karma-chrome-launcher": "^3.1.1",
+    "karma-coverage": "^2.2.0",
+    "karma-firefox-launcher": "^2.1.2",
+    "karma-jasmine": "^5.1.0",
+    "karma-safari-launcher": "https://github.com/RLovelett/karma-safari-launcher.git#safari-webdriver",
+    "karma-summary-reporter": "^3.1.1",
+    "load-grunt-tasks": "^5.1.0",
+    "prettier": "^2.7.1",
+    "reductio": "^1.0.0",
     "regression": "^2.0.1",
-    "rollup": "^2.59.0",
-    "rollup-plugin-license": "^2.2.0",
-    "rollup-plugin-terser": "^7.0.1",
-    "rollup-plugin-typescript2": "^0.27.1",
-    "time-grunt": "~1.4",
+    "rollup": "^2.78.1",
+    "rollup-plugin-license": "^2.8.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.33.0",
+    "sass": "^1.54.5",
+    "time-grunt": "^2.0.0",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "typedoc": "^0.21.9",
+    "typedoc": "^0.23.11",
     "typedoc-plugin-pages-fork-fork": "^0.0.3",
-    "typescript": "^4.4.2"
+    "typescript": "^4.8.2"
   },
   "scripts": {
     "test": "grunt test"
