--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@chiragrupani/karma-chromium-edge-launcher": "^2.2.2",
+    "@knodes/typedoc-plugin-pages": "^0.23.1",
     "@rollup/plugin-json": "^4.1.0",
     "@types/d3": "^7.1.0",
     "compare-versions": "^3.6.0",
@@ -74,7 +75,6 @@
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typedoc": "^0.23.11",
-    "typedoc-plugin-pages-fork-fork": "^0.0.3",
     "typescript": "^4.8.2"
   },
   "scripts": {
