- `rollup-plugin-typescript2` does not work with node16 modules. Use `@rollup/plugin-typescript` instead. - Use json5 to parse JSON with comments. - Switch to node16 modules. - instead of importing `version` from `package.json`, create a `.ts` file with the version string.

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,7 @@ web/
 
 # Igonore, copied from npm modules
 spec/3rd-party/
+
+# Generated files, not to be checked in
+/src/version.ts
+/tsconfig-rollup.json
