--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "devDependencies": {
     "@chiragrupani/karma-chromium-edge-launcher": "^2.2.2",
     "@knodes/typedoc-plugin-pages": "^0.23.1",
-    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-typescript": "^9.0.2",
     "@types/d3": "^7.1.0",
     "compare-versions": "^3.6.0",
     "crossfilter2": "^1.5.2",
@@ -55,6 +55,7 @@
     "grunt-sass": "^3.1.0",
     "grunt-shell": "^4.0.0",
     "jasmine-core": "^4.3.0",
+    "json5": "^2.2.1",
     "karma": "^6.4.0",
     "karma-chrome-launcher": "^3.1.1",
     "karma-coverage": "^2.2.0",
@@ -69,7 +70,6 @@
     "rollup": "^2.78.1",
     "rollup-plugin-license": "^2.8.1",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.33.0",
     "sass": "^1.54.5",
     "time-grunt": "^2.0.0",
     "tslint": "^6.1.3",
