--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@chiragrupani/karma-chromium-edge-launcher": "^2.2.2",
     "@knodes/typedoc-plugin-pages": "^0.23.1",
+    "@rollup/plugin-terser": "^0.1.0",
     "@rollup/plugin-typescript": "^9.0.2",
     "@types/d3": "^7.1.0",
     "compare-versions": "^3.6.0",
@@ -69,7 +70,6 @@
     "regression": "^2.0.1",
     "rollup": "^2.78.1",
     "rollup-plugin-license": "^2.8.1",
-    "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.54.5",
     "time-grunt": "^2.0.0",
     "tslint": "^6.1.3",
