A remote data example

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -56,6 +56,6 @@
     // "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
   },
-  "include": ["./src/**/*.mts"],               /* Only compile files in src, avoids confusion with code in node_modules or compiled code */
+  "include": ["./src/**/*.ts"],               /* Only compile files in src, avoids confusion with code in node_modules or compiled code */
   "exclude": []                               /* Version info is needed only in the UMD bundle */
 }
