--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "crossfilter2": "^1.5.4",
     "d3": "^7.1.1",
+    "dc": "file:..",
     "express": "^4.18.2",
     "typescript": "^4.8.2"
   }
