--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -14,4 +14,6 @@ jobs:
         with:
           node-version: '18.x'
       - run: npm ci
-      - run: npx grunt ci-windows
+      - run: npm run build
+      - run: npm run karmaEdge
+      - run: npm run karmaChrome
